FIX: social icon on desktop to be visible using anchor. share-tooltip size

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ body {
     cursor: pointer;
     background-color: var(--clr-neutral-200);
     z-index: 5;
-    transition: backgrounf-color 0.3s ease;
+    transition: background-color 0.3s ease;
 }
 
 .share-btn.active {
@@ -150,6 +150,16 @@ body {
     transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
+/* This is the new rule for icon sizing */
+.social-icon {
+    width: 24px;
+    height: 24px;
+}
+
+/*  */
+.share-tooltip .share-icon {
+    filter: brightness(0) invert(1);
+}
 /* mobile Active State: footer transforms */
 .article-footer.active {
     background-color: var(--clr-primary-400);
@@ -179,6 +189,14 @@ body {
     gap: 16px;
     align-items: center;
 }
+
+/*  */
+.share-links a {
+    display: block;
+    height: 24px;
+    width: 24px;
+}
+
 
 /* ------------------- */
 /* Desktop Styles      */
@@ -263,7 +281,7 @@ body {
 .share-tooltip.active {
     opacity: 1;
     visibility: visible;
-    transform: translate(-50%) scale(1) translateY(0);
+    transform: translateX(-50) scale(1) translateY(0);
 }
 
 /* The Triangle for desktop */
@@ -277,6 +295,7 @@ body {
     border-style: solid;
     border-color: var(--clr-primary-400) transparent transparent transparent;
 }
+
 }
 
 
